--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,15 @@ sourceCompatibility = 1.11
 
 repositories {
     mavenCentral()
-    jcenter()
 }
 
 dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'org.fastily:jwiki:1.8.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+}
+test {
+    useJUnitPlatform()
 }
